syntax = "proto3";

package didcomm.messaging;

option csharp_namespace = "DIDComm.Messaging";
option go_package = "didcomm.org/messaging";
option java_package = "DIDComm.Messaging.Proto";
option java_outer_classname="API";

import "security.proto";
import "google/protobuf/struct.proto";

message GenerateKeyRequest {
    bytes seed = 1;
    KeyType key_type = 2;
}
message GenerateKeyResponse {
    Key key = 1;
}
message ConvertKeyRequest {
    Key key = 1;
    KeyType target_type = 2;
}
message ConvertKeyResponse {
    Key key = 1;
}

message SignRequest {
    bytes payload = 1;
    Key key = 2;
    SignedMessage append_to = 3;
}

message SignResponse {
    SignedMessage message = 1;
}

message VerifyRequest {
    SignedMessage message = 1;
    Key key = 2;
}

message VerifyResponse {
    bool is_valid = 1;
}

message PackRequest {
    Key sender_key = 1;
    Key receiver_key = 2;
    bytes associated_data = 3;
    bytes plaintext = 4;
    EncryptionMode mode = 5;
    EncryptionAlgorithm algorithm = 6;
}

message PackResponse {
    EncryptedMessage message = 1;
}

message UnpackRequest {
    Key sender_key = 1;
    Key receiver_key = 2;

    EncryptedMessage message = 3;
}

message UnpackResponse {
   bytes plaintext = 1;
}

message GetDidDocumentRequest {
    Key key = 1;
}

message GetDidDocumentResponse {
    google.protobuf.Struct did_document = 1;
}

message Key {
    string key_id = 1                               [json_name="kid"];
    bytes public_key = 2;
    bytes secret_key = 3;
    KeyType key_type = 4;
    string fingerprint = 5;
}
enum KeyType {
    x25519 = 0;
    p256 = 1;
    ed25519 = 2;
}
